# Kudakan_Backend

./: .gitignore  .replit  README.md  auth.py  auth_schemas.py  database.py  main.py  minio_client.py  models.py  pyproject.toml  requirements.txt  schemas.py  simple_main.py  supabase_storage.py
attached_assets/: Pasted--Tabel-Mahasiswa-Tabel-ini-menyimpan-data-pengguna-yang-berperan-sebagai-mahasiswa-Kolom--1748800864278.txt  Pasted-Dengan-struktur-ini-Buatkan-FAST-API-dengan-swagger-UI-untuk-backend-berbasis-minio-dan-FASTAPI--1748800302453.txt
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
routers/: auth.py  detail_pesanan.py  kantin.py  mahasiswa.py  menu.py  pesanan.py
